--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <h1>Insanely Expensive JPEGs</h1>
-        <h2>(Also known as NFTs)</h2>
+      <div class="container nav-bar">
+        <div>
+          <h1>Insanely Expensive JPEGs</h1>
+          <h2>(Also known as NFTs)</h2>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#">Buy</a></li>
+            <li><a href="#">Resources</a></li>
+            <li><a href="#">Explore</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
 
@@ -48,22 +57,29 @@
         <div class="container">
           <h2>For the true Crypto-connoisseur</h2>
           <div class="product__imgs--align">
-            <img
-              src="images/crypto-punk.jpg"
-              alt="punk with blach hair and red and blue glasses"
-            />
-            <img
-              src="images/bag.svg"
-              alt="Seven items from a game listed in white on a black background"
-            />
+            <div>
+              <img
+                src="images/crypto-punk.jpg"
+                alt="punk with blach hair and red and blue glasses"
+              />
+              <p>
+                Is $33k for sneakers too basic for you? No problem! This
+                CryptoPunk (left) is a steal at $6.6 million! Which makes Bag
+                #748 (right) a total bargain at $1.4 million.
+              </p>
+            </div>
+            <div>
+              <img
+                src="images/bag.svg"
+                alt="Seven items from a game listed in white on a black background"
+              />
+              <p>
+                And by the way, that's not a VS Code screenshot we included by
+                mistake. The eight lines of white text on a black background is
+                the actual NFT we're selling.
+              </p>
+            </div>
           </div>
-          <p>
-            Is $33k for sneakers too basic for you? No problem! This CryptoPunk
-            (left) is a steal at $6.6 million! Which makes Bag #748 (right) a
-            total bargain at $1.4 million. And by the way, that's not a VS Code
-            screenshot we included by mistake. The eight lines of white text on
-            a black background is the actual NFT we're selling.
-          </p>
           <a href="#" class="about__link link__style">About Us</a>
           <a href="#" class="info__link link__style">Contact</a>
           <p>
